[package]
name = "watchdog-ws"
version = "0.1.0"
authors = ["Leo <leo881003@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ws = { version = "0.9.0", features = ["ssl"] }
toml = "0.5.3"
serde = { version = "1.0.100", features = ["derive"] }
log = "0.4.8"
custom_error = "1.7.1"
env_logger = "0.6.2"
url = "2.1.0"
lazy_static = "1.4.0"
